--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -1,7 +1,9 @@
 body {
   margin: 0;
   padding: 0;
- 
+ background: url("../images/bg.jpg") no-repeat;
+ background-position: cover;
+ /* background-size: 100% 100%; */
   font-family: 'Poppins', sans-serif;
   color: #fff;
 }
